<resources>
    <string name="app_name">Html2BitmapDemo</string>
    <string name="enter_html">Enter Html:</string>
    <string name="default_html">
<![CDATA[
<html>\n
\t    <body>\n

\t\t        <p>Hello world!</p><br/>\n
\t\t        <img src="rainbow_200_200.png" /><br/>\n
\t\t        Html bitmap\n
\t    </body>\n
<html>\n
]]>
    </string>
    <string name="generate_bitmap">Generate bitmap</string>
    <string name="enter_width">Enter Width</string>
    <string name="_150">150</string>
    <string name="bitmap_generated_from_html">Bitmap generated from html</string>
</resources>
